# Zonnecel

./: DiodeExperiment.py  ElectronicLoadMeasurements.py  FILEHOPPA.csv  Yes.csv  arduino_device.py  hello.py  metingen.csv  metingencli.csv  py.py  pyproject.toml  rap.csv  test.py  view.py
conda/: pyproject.toml
overige bestaden nutteloos/: opdracht week 2.py
src/Zonnecel/: GUI.py  view.py  zonnecelcalc.py  zonneceldevice.py
src/pythondaq/: DiodeExperiment.py  arduino_device.py  cli.py  gui.py  h.py  view.py
