[tool.poetry]
name = "pythondaq"
version = "0.1.0"
description = ""
authors = ["DionKosterUvA <149403875+DionKosterUvA@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
pyvisa = "^1.14.0"
numpy = "^1.26.2"
matplotlib = "^3.8.1"
click = "^8.1.7"
pyvisa-py = "^0.7.1"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#script to start test
[tool.poetry.scripts]
diode = "pythondaq.cli:cmd_group"
starttest = "pythondaq.view:plot"
app = "pythondaq.h:main"
