[tool.poetry]
name = "conda"
version = "0.1.0"
description = ""
authors = ["DionKosterUvA <149403875+DionKosterUvA@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "conda", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
